[package]
name = "cargo-sqlx"
version = "0.1.0"
description = "Simple postgres migrator without support for down migration"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/JesperAxelsson/blue-grouse-migrator"
repository = "https://github.com/JesperAxelsson/blue-grouse-migrator"
keywords = ["database", "postgres", "database-management", "migration"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "sqlx"
path = "src/main.rs"

[dependencies]
dotenv = "0.15"

tokio = { version = "0.2", features = ["macros"] }
# sqlx = { path = "..", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
sqlx = { version = "0.2", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
futures="0.3"

structopt = "0.3"
chrono = "0.4"
