[package]
name = "mason-postgres"
version = "0.0.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "PostgreSQL database driver for dbx."
edition = "2018"

[dependencies]
runtime = "=0.3.0-alpha.4"
futures-preview = "=0.3.0-alpha.16"
failure = "0.1"
byteorder = "1.3.1"
log = "0.4"
hex = "0.3.2"
bytes = "0.4.12"
memchr = "2.2.0"
