[package]
name = "sqlx-bench"
version = "0.1.0"
authors = ["Austin Bonander <austin@launchbadge.com>"]
edition = "2021"
publish = false

[features]
runtime-actix-native-tls = ["runtime-tokio-native-tls"]
runtime-async-std-native-tls = [
    "sqlx/runtime-async-std-native-tls",
    "sqlx-rt/runtime-async-std-native-tls",
]
runtime-tokio-native-tls = [
    "sqlx/runtime-tokio-native-tls",
    "sqlx-rt/runtime-tokio-native-tls",
]

runtime-actix-rustls = ["runtime-tokio-rustls"]
runtime-async-std-rustls = [
    "sqlx/runtime-async-std-rustls",
    "sqlx-rt/runtime-async-std-rustls",
]
runtime-tokio-rustls = [
    "sqlx/runtime-tokio-rustls",
    "sqlx-rt/runtime-tokio-rustls",
]

postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
criterion = "0.3.3"
dotenvy = "0.15.0"
once_cell = "1.4"
sqlx = { version = "0.6", path = "../", default-features = false, features = ["macros"] }
sqlx-rt = { version = "0.6", path = "../sqlx-rt", default-features = false }

chrono = "0.4.19"

[[bench]]
name = "pg_pool"
harness = false
required-features = ["postgres"]

[[bench]]
name = "sqlite_fetch_all"
harness = false
required-features = ["sqlite"]
