[package]
name = "sqlx-cli"
version.workspace = true
description = "Command-line utility for SQLx, the Rust SQL toolkit."
edition = "2021"
readme = "README.md"
homepage = "https://github.com/launchbadge/sqlx"
repository = "https://github.com/launchbadge/sqlx"
keywords = ["database", "postgres", "database-management", "migration"]
categories = ["database", "command-line-utilities"]
license = "MIT OR Apache-2.0"
default-run = "sqlx"
authors = [
    "Jesper Axelsson <jesperaxe@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
]

[[bin]]
name = "sqlx"
path = "src/bin/sqlx.rs"

# enables invocation as `cargo sqlx`; required for `prepare` subcommand
[[bin]]
name = "cargo-sqlx"
path = "src/bin/cargo-sqlx.rs"

[dependencies]
dotenvy = "0.15.0"
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }
sqlx = { workspace = true, default-features = false, features = [
    "migrate",
    "any",
] }
futures = "0.3.26"
clap = { version = "4.1.6", features = ["derive", "env"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
anyhow = "1.0.69"
url = { version = "2.3.1", default-features = false }
async-trait = "0.1.64"
console = "0.15.5"
promptly = "0.3.1"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
glob = "0.3.1"
openssl = { version = "0.10.45", optional = true }
# workaround for https://github.com/rust-lang/rust/issues/29497
remove_dir_all = "0.7.0"
cargo_metadata = "0.15.3"
filetime = "0.2"

backoff = { version = "0.4.0", features = ["futures", "tokio"] }

[features]
default = ["postgres", "sqlite", "mysql", "native-tls"]
rustls = ["sqlx/runtime-tokio-rustls"]
native-tls = ["sqlx/runtime-tokio-native-tls"]

# databases
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

# workaround for musl + openssl issues
openssl-vendored = ["openssl/vendored"]
